// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextArea should accept available suggestions props 1`] = `
<div
  className="ctrl-input"
>
  <label
    htmlFor="select-checkbox"
  >
    Label Name
    
     
  </label>
  <div>
    <textarea
      id="select-checkbox"
      name="checkbox"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </div>
</div>
`;

exports[`RichTextArea should have a help block 1`] = `
<div
  className="ctrl-input"
>
  <label
    htmlFor="select-checkbox"
  >
    Label Name
    
     
    <span
      className="help-block"
    >
      <span
        aria-hidden="true"
        className="glyphicon glyphicon-question-sign"
      />
       
      Help
       
    </span>
  </label>
  <div>
    <textarea
      id="select-checkbox"
      name="checkbox"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </div>
</div>
`;

exports[`RichTextArea should have this default template 1`] = `
<div
  className="ctrl-input"
>
  <label
    htmlFor="select-checkbox"
  >
    Label Name
    
     
  </label>
  <div>
    <textarea
      id="select-checkbox"
      name="checkbox"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </div>
</div>
`;

exports[`RichTextArea should use the rte lib to get desired element 1`] = `
<div
  className="ctrl-input"
>
  <label
    htmlFor="select-checkbox"
  >
    Label Name
    
     
  </label>
  <div>
    <div
      className="root"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column-reverse",
        }
      }
    >
      <div
        className="root"
        style={undefined}
      >
        <div
          className="root"
        >
          <div
            className="root"
          >
            <button
              className="root root"
              disabled={undefined}
              onClick={[Function]}
              onMouseDown={[Function]}
              title="Bold"
              type="button"
            >
              <span
                className="icon-bold"
              />
            </button>
          </div>
          <div
            className="root"
          >
            <button
              className="root root"
              disabled={undefined}
              onClick={[Function]}
              onMouseDown={[Function]}
              title="Italic"
              type="button"
            >
              <span
                className="icon-italic"
              />
            </button>
          </div>
        </div>
        <div
          className="root"
        >
          <div
            className="root"
          >
            <button
              className="root root"
              disabled={true}
              onClick={[Function]}
              onMouseDown={undefined}
              onSubmit={[Function]}
              placeholder="Insert an URL or a tooltip"
              title="Link or Tooltip"
              type="button"
            >
              <span
                className="icon-link"
              />
            </button>
          </div>
          <div
            className="root"
          >
            <button
              className="root root"
              disabled={true}
              onClick={[Function]}
              onMouseDown={[Function]}
              title="Remove Link or Tooltip"
              type="button"
            >
              <span
                className="icon-remove-link"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="editor"
        style={undefined}
      >
        <div
          className="DraftEditor-root"
        >
          <div
            className="DraftEditor-editorContainer"
          >
            <div
              aria-activedescendant={undefined}
              aria-autocomplete={undefined}
              aria-controls={undefined}
              aria-describedby={null}
              aria-expanded={null}
              aria-label={undefined}
              aria-multiline={undefined}
              autoCapitalize={undefined}
              autoComplete={undefined}
              autoCorrect={undefined}
              className="notranslate public-DraftEditor-content"
              contentEditable={true}
              data-testid={undefined}
              onBeforeInput={[Function]}
              onBlur={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCopy={[Function]}
              onCut={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              onSelect={[Function]}
              role="textbox"
              spellCheck={true}
              style={
                Object {
                  "outline": "none",
                  "whiteSpace": "pre-wrap",
                  "wordWrap": "break-word",
                }
              }
              suppressContentEditableWarning={true}
              tabIndex={undefined}
            >
              <div
                data-contents="true"
              >
                <div
                  className="singleline"
                  data-block={true}
                  data-editor="64eq3"
                  data-offset-key="f5cl5-0-0"
                >
                  <div
                    className="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                    data-offset-key="f5cl5-0-0"
                  >
                    <span
                      data-offset-key="f5cl5-0-0"
                      style={Object {}}
                    >
                      <br
                        data-text="true"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
